--- a/frontend/src/locales/ro.json
+++ b/frontend/src/locales/ro.json
@@ -46,7 +46,7 @@
   "navbar": {
     "dashboard": "Panou",
     "wallets": "Portofele",
-    "analytics": "Analiză",
+    "analytics": "Statistici",
     "settings": "Setări"
   }
 }
